fix form gap

--- a/app/assets/stylesheets/helpers.scss
+++ b/app/assets/stylesheets/helpers.scss
@@ -14,6 +14,7 @@
 
 @media screen and (min-width: 767px) {
   label.no-gap-top-desktop {
+    margin-bottom: 0;
     margin-top: 0;
   }
 }
